added NMK class

--- a/gameEngines/gameEngines.vcxproj.filters
+++ b/gameEngines/gameEngines.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClInclude Include="CaptureGoEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NMKEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CaptureGoEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NMKEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
