added NMKEngine test empty file

--- a/UnitTestGameEngines/UnitTestGameEngines.vcxproj.filters
+++ b/UnitTestGameEngines/UnitTestGameEngines.vcxproj.filters
@@ -18,8 +18,8 @@
     <ClCompile Include="unittestCaptureGoEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClCompile Include="unittestNMKEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
