--- a/gameSolver/gameSolver.vcxproj
+++ b/gameSolver/gameSolver.vcxproj
@@ -91,6 +91,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
+      <AdditionalIncludeDirectories>../gameEngines/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -140,12 +141,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="exceptions.h" />
+    <ClInclude Include="MinMaxAlgorithm.h" />
     <ClInclude Include="PerformanceCounter.h" />
     <ClInclude Include="ProofNumberSearch.h" />
     <ClInclude Include="ProofNumberSearchWrapped.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="exceptions.cpp" />
+    <ClCompile Include="MinMaxAlgorithm.cpp" />
     <ClCompile Include="PerformanceCounter.cpp" />
     <ClCompile Include="ProofNumberSearch.cpp" />
     <ClCompile Include="ProofNumberSearchWrapped.cpp" />
