comment unused code

--- a/UnitTestGameSolver/UnitTestGameSolver.vcxproj.filters
+++ b/UnitTestGameSolver/UnitTestGameSolver.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="unittestProofNumberSearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unittestMinmax.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
