--- a/gameSolver/gameSolver.vcxproj.filters
+++ b/gameSolver/gameSolver.vcxproj.filters
@@ -30,10 +30,16 @@
     <ClInclude Include="ProofNumberSearchWrapped.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Negamax.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Minmax.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Negamax.h">
+    <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -48,12 +54,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ProofNumberSearchWrapped.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Minmax.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Negamax.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
