--- a/gameEngines/gameEngines.vcxproj.filters
+++ b/gameEngines/gameEngines.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="NMKEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Board.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CaptureGoEngine.cpp">
