--- a/gameEngines/gameEngines.vcxproj.filters
+++ b/gameEngines/gameEngines.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="NMKEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CaptureGoEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NMKEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
