GeneratePossibleMoves returns moves count and pass boards as parameter

--- a/GameSolverEfficiencyTests/gameSolverEfficiencyTests.vcxproj
+++ b/GameSolverEfficiencyTests/gameSolverEfficiencyTests.vcxproj
@@ -141,6 +141,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
+      <AdditionalIncludeDirectories>../gameSolver;../gameDataStructures;../gameEngines</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
