--- a/gameEngines/gameEngines.vcxproj
+++ b/gameEngines/gameEngines.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="CaptureGoEngine.h" />
     <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="BoardIndex.h" />
     <ClInclude Include="NMKEngine.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
