--- a/gameEngines/gameEngines.vcxproj.filters
+++ b/gameEngines/gameEngines.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BoardIndex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CaptureGoEngine.cpp">
