--- a/gameEngines/gameEngines.vcxproj
+++ b/gameEngines/gameEngines.vcxproj
@@ -142,11 +142,13 @@
     <ClInclude Include="CaptureGoEngine.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="BoardIndex.h" />
+    <ClInclude Include="GIPFEngine.h" />
     <ClInclude Include="NMKEngine.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CaptureGoEngine.cpp" />
+    <ClCompile Include="GIPFEngine.cpp" />
     <ClCompile Include="NMKEngine.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
