added unittestPlayer and GameEngine

--- a/UnitTestGameEngines/UnitTestGameEngines.vcxproj
+++ b/UnitTestGameEngines/UnitTestGameEngines.vcxproj
@@ -88,7 +88,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories);../gameEngines/</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile />
@@ -165,7 +165,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="unittestCaptureGoEngine.cpp" />
+    <ClCompile Include="unittestGIPFEngine.cpp" />
     <ClCompile Include="unittestNMKEngine.cpp" />
+    <ClCompile Include="unittestPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gameEngines\gameEngines.vcxproj">
