--- a/UnitTestGameEngines/UnitTestGameEngines.vcxproj.filters
+++ b/UnitTestGameEngines/UnitTestGameEngines.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="unittestNMKEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unittestGIPFEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="unittestPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
