added GetGameState function

--- a/ZadStud/ZadStud.vcxproj
+++ b/ZadStud/ZadStud.vcxproj
@@ -152,7 +152,13 @@
     <Text Include="out.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="test.in" />
     <None Include="tests_GIPF\1.in" />
+    <None Include="tests_GIPF\1.out" />
+    <None Include="tests_GIPF\2.in" />
+    <None Include="tests_GIPF\2.out" />
+    <None Include="tests_GIPF\test.in" />
+    <None Include="tests_GIPF\test.out" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
