--- a/ZadStud/tests_GIPF/2.in
+++ b/ZadStud/tests_GIPF/2.in
@@ -9,6 +9,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 9 12 W
@@ -19,6 +21,8 @@ B _ _ _ _ _ W
  _ W _ W _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -31,6 +35,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 12 11 W
@@ -41,6 +47,8 @@ B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -53,6 +61,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 16 15
 12 12 W
@@ -63,6 +73,8 @@ B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 9
@@ -75,6 +87,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 15 12 W
@@ -85,6 +99,8 @@ B _ _ _ _ _ _
  _ _ _ _ _ _
   _ _ _ _ _
    _ _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -97,6 +113,8 @@ _ _ _ _ _ _ _
   _ _ _ _ _
    _ _ _ _
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 12 12 W
@@ -107,6 +125,8 @@ B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -119,6 +139,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 12 12 W
@@ -129,6 +151,8 @@ B _ _ _ _ _ W _
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -141,6 +165,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B _
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 12 12 W
@@ -151,6 +177,8 @@ B _ _ _ _ _ W
  _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
@@ -163,6 +191,8 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
+PRINT_GAME_BOARD
+
 LOAD_GAME_BOARD
 4 4 15 15
 12 12 W
@@ -173,6 +203,8 @@ _ _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
