implemeted doMove function

--- a/ZadStud/tests_GIPF/2.in
+++ b/ZadStud/tests_GIPF/2.in
@@ -9,122 +9,7 @@ B _ _ _ _ _ W
   _ _ _ _ _
    W _ _ B
 
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ W _ _ _
-B _ _ _ _ _ W
- _ W _ W _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ W _ B _
-B _ _ _ _ _ W
- _ W _ W _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-12 11 W
-   W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-11 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 16 15
-12 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 9
-12 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-15 12 W
-   _ _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ _
- _ _ _ _ _ _
-  _ _ _ _ _
-   _ _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-15 15 W
-   _ _ _ _
-  _ _ _ _ _
- _ _ _ _ _ _
-_ _ _ _ _ _ _
- _ _ _ _ _ _
-  _ _ _ _ _
-   _ _ _ _
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-12 12 W
-   W _ _ B
-  _ _ W _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
+DO_MOVE a5-b5
 
 PRINT_GAME_BOARD
 
@@ -135,22 +20,71 @@ LOAD_GAME_BOARD
   _ _ _ _ _
  _ _ _ _ _ _
 B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e1-e2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ W _ _ _
+   W _ _ B
+
+DO_MOVE e1-e2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e9-e8
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ W
+  _ _ _ B _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e9-e8
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 11 W
+   W _ _ B
+  _ _ _ W _
  _ _ _ B _ _
-  _ _ _ _ _
-   W _ _ B
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-12 12 W
-   W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W _
+B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+DO_MOVE e9-e8
 
 PRINT_GAME_BOARD
 
@@ -163,7 +97,39 @@ LOAD_GAME_BOARD
 B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
-   W _ _ B _
+   W _ _ B
+
+DO_MOVE i5-h5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B   
+  _ _ _ _ _  
+ _ _ _ _ _ _ 
+B _ _ _ _ W W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i5-h5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 11 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ W W B
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i5-h5
 
 PRINT_GAME_BOARD
 
@@ -174,45 +140,40 @@ LOAD_GAME_BOARD
   _ _ _ _ _
  _ _ _ _ _ _
 B _ _ _ _ _ W
- _ _ _ _ _
+ _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+DO_MOVE a1-b2
 
 PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
-12 12 W
-   W _ _ _
+11 12 B
+   W _ _ B
   _ _ _ _ _
  _ _ _ _ _ _
-B _ _ _ _ _ W
+W B _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
    W _ _ B
+
+DO_MOVE a1-b2
 
 PRINT_GAME_BOARD
 
 LOAD_GAME_BOARD
 4 4 15 15
-12 12 W
+11 11 W
+   W _ _ B    
+  _ _ _ _ _   
+ _ _ _ _ _ _  
+B W B _ _ _ W 
+ _ _ _ _ _ _ 
+  _ _ _ _ _ 
    W _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-_ _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
+
+DO_MOVE a1-b2
 
 PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-12 12 W
-   W _ _ _ B
-  _ _ _ _ _
- _ _ _ _ _ _
-B _ _ _ _ _ W
- _ _ _ _ _ _
-  _ _ _ _ _
-   W _ _ B
