--- a/ZadStud/tests_GIPF/test.in
+++ b/ZadStud/tests_GIPF/test.in
@@ -1,4 +1,56 @@
 LOAD_GAME_BOARD
+3 3 12 12
+9 9 W
+  W _ B
+ _ _ _ _
+B _ _ _ W
+ _ _ _ _
+  W _ B
+
+DO_MOVE g1-f2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+3 3 12 12
+8 9 B
+  W _ B
+ _ _ _ _
+B _ _ _ W
+ _ _ B _
+  W _ W
+
+DO_MOVE g1-f2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+3 3 12 12
+8 8 W
+  W _ B  
+ _ _ _ _ 
+B _ B _ W
+ _ _ W _
+  W _ B
+
+DO_MOVE g1-f2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+3 3 12 12
+7 8 B
+  W _ B
+ _ B _ _
+B _ W _ W
+ _ _ B _
+  W _ W
+
+DO_MOVE g1-f2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
 4 4 15 15
 12 12 W
    W _ _ B
@@ -7,6 +59,216 @@ LOAD_GAME_BOARD
 B _ _ _ _ _ W
  _ _ _ _ _ _
   _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i1-h2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ B _
+   W _ _ W
+
+DO_MOVE i1-h2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE a5-b5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B
+  _ W _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE a5-b5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e1-e2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ W _ _ _
+   W _ _ B
+
+DO_MOVE e1-e2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e9-e8
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ W
+  _ _ _ B _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e9-e8
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 11 W
+   W _ _ B
+  _ _ _ W _
+ _ _ _ B _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE e9-e8
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i5-h5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B   
+  _ _ _ _ _  
+ _ _ _ _ _ _ 
+B _ _ _ _ W W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i5-h5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 11 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ W W B
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE i5-h5
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+12 12 W
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+B _ _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE a1-b2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 12 B
+   W _ _ B
+  _ _ _ _ _
+ _ _ _ _ _ _
+W B _ _ _ _ W
+ _ _ _ _ _ _
+  _ _ _ _ _
+   W _ _ B
+
+DO_MOVE a1-b2
+
+PRINT_GAME_BOARD
+
+LOAD_GAME_BOARD
+4 4 15 15
+11 11 W
+   W _ _ B    
+  _ _ _ _ _   
+ _ _ _ _ _ _  
+B W B _ _ _ W 
+ _ _ _ _ _ _ 
+  _ _ _ _ _ 
    W _ _ B
 
 DO_MOVE a1-b2
