--- a/ZadStud/tests_GIPF/test.in
+++ b/ZadStud/tests_GIPF/test.in
@@ -1,145 +1,118 @@
 LOAD_GAME_BOARD
+2 3 5 5
+1 0 W
+ _ B
+B W W
+ B B
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+2 3 5 5
+0 1 B
+ _ B
+B W W
+ B B
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+2 3 4 4
+1 2 W
+ _ _
+_ _ _
+ _ _
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+2 3 4 4
+2 1 W
+ _ _
+_ _ _
+ _ _
+
+SOLVE_GAME_STATE
+
+LOAD_GAME_BOARD
+2 3 4 4
+2 2 W
+ _ _
+_ _ _
+ _ _
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+2 3 4 4
+1 1 W
+ W B
+B _ W
+ W B
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
 4 4 15 15
-9 3 W
+1 2 B
    W _ _ B
+  W B _ _ W
+ B _ W _ B _
+B _ W _ B B W
+ W _ B _ W _
   _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
+   W _ W B
 
-DO_MOVE a5-b5 b: e2 e3
+SOLVE_GAME_STATE 
 
 LOAD_GAME_BOARD
 4 4 15 15
-9 3 W
+3 4 B
+   _ _ _ _
+  _ _ _ _ _
+ _ _ _ _ _ _
+_ _ _ _ _ _ _
+ _ _ _ _ _ _
+  _ _ _ _ _
+   _ _ _ _
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+4 4 15 15
+3 3 B
+   _ _ _ _
+  _ _ _ _ _
+ _ _ _ _ _ _
+_ _ _ _ _ _ _
+ _ _ _ _ _ _
+  _ _ _ _ _
+   _ _ _ _
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+4 4 15 15
+3 1 B
+   _ _ _ _
+  _ _ _ _ _
+ _ _ _ _ _ _
+_ _ _ _ _ _ _
+ _ _ _ B _ _
+  _ _ _ B _
+   _ _ _ B
+
+SOLVE_GAME_STATE 
+
+LOAD_GAME_BOARD
+4 4 15 15
+2 2 B
    W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
+  _ B _ _ W
+ B _ W _ W _
+_ _ W _ _ B W
+ W _ B _ W _
+  _ _ _ _ _
+   _ _ W B
 
-DO_MOVE a5-b5 w: e2 e5
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 3 W
-   W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
-
-DO_MOVE a5-b5 b: h2 e5
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 3 W
-   W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
-
-DO_MOVE a5-b5 b: e5 h2
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 3 W
-   W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
-
-DO_MOVE a5-b5 b: e2 e5
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 3 W
-   W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
-
-DO_MOVE a5-b5 b: e5 e2
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-9 3 W
-   W _ _ B
-  _ W _ _ _
- _ _ B _ _ _
-B _ _ _ _ _ W
- _ _ B B _ _
-  _ B _ B _
-   B _ _ B
-
-DO_MOVE a5-b5 b: e5 e2
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-6 3 W
-   _ _ _ W
-  _ _ _ W _
- _ _ _ W _ _
-W W W _ _ _ _
- _ _ _ W _ _
-  _ _ _ W _
-   _ _ _ W
-
-DO_MOVE a1-b2 w: e5 e8
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-6 3 W
-   _ _ _ W
-  _ _ _ W _
- _ _ _ W _ _
-W W W _ _ _ _
- _ _ _ W _ _
-  _ _ _ W _
-   _ _ _ W
-
-DO_MOVE a1-b2 w: e5 h2
-
-PRINT_GAME_BOARD
-
-LOAD_GAME_BOARD
-4 4 15 15
-6 3 W
-   _ _ _ W
-  _ _ _ W _
- _ _ _ W _ _
-W W W _ _ _ _
- _ _ _ W _ _
-  _ _ _ W _
-   _ _ _ W
-
-DO_MOVE a1-b2 w: e5 h2
-
-PRINT_GAME_BOARD
+SOLVE_GAME_STATE 
